# flask-ujson

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_build.txt
.github/workflows/: publish.yaml
app/: __init__.py
docs/: api.md  conf.py  index.md
flask_ujson/: __init__.py
requirements/: dev.txt  typing.in  typing.txt
src/flask_ujson/: __init__.py  provider.py
tests/: conftest.py  test_provider.py
