[project]
name = "flask-ujson"
version = "2.0.0"
description = "A Flask/Quart JSON provider using the fast ujson library."
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Pallets Community Ecosystem", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "ujson",
]

[project.urls]
Documentation = "https://flask-ujson.readthedocs.io"
Changes = "https://flask-ujson.readthedocs.io/changes/"
Source = "https://github.com/pallets-eco/flask-ujson/"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["flask_ujson", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
files = ["src/flask_ujson", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
include = ["src/flask_ujson", "tests"]

[tool.ruff]
src = ["src"]
fix = true
unsafe-fixes = true
show-fixes = true
show-source = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
